mesa (24.0.0~rc1-1) UNRELEASED; urgency=medium

  * New upstream release candidate.
  * patches: Drop the zink reverts.
  * rules: Modify video-codecs option to build all codecs. Thanks,
    Safir Secerovic!

 -- Timo Aaltonen <tjaalton@debian.org>  Fri, 12 Jan 2024 15:01:00 +0200

mesa (23.3.3-2) unstable; urgency=medium

  * rules: Drop virtio from armel again, regression due to cleanup.
    (Closes: #1060849)
  * rules: Drop mips64el from LLVM_ARCHS, as llvm-17-dev is still not
    available. (Closes: #1060779)

 -- Timo Aaltonen <tjaalton@debian.org>  Tue, 16 Jan 2024 14:00:26 +0200

mesa (23.3.3-1) unstable; urgency=medium

  * New upstream release.
  * patches, rules: Revert riscv64 back to plain softpipe swrast, drop
    orcjit patch. (Closes: #1060376)
  * patches: Drop d3d12 reverts, upstream.

 -- Timo Aaltonen <tjaalton@debian.org>  Thu, 11 Jan 2024 10:10:19 +0200

mesa (23.3.2-2) unstable; urgency=medium

  * patches: Revert two commits on d3d12 that regressed at least swrast.
    (Closes: #1059971, #1060017)

 -- Timo Aaltonen <tjaalton@debian.org>  Fri, 05 Jan 2024 11:07:26 +0200

mesa (23.3.2-1) unstable; urgency=medium

  [ Timo Aaltonen ]
  * New upstream release.
  * patches: Refreshed, and dropped an upstreamed patch.

  [ Tao Chen ]
  * Add Loongarch support

 -- Timo Aaltonen <tjaalton@debian.org>  Wed, 03 Jan 2024 15:19:43 +0200

mesa (23.3.1-4) unstable; urgency=medium

  * patches: Fix a regression in crocus. (Closes: #1059015)

 -- Timo Aaltonen <tjaalton@debian.org>  Sat, 23 Dec 2023 12:08:05 +0200

mesa (23.3.1-3) unstable; urgency=medium

  * llvmpipe-add-orcjit.diff: Fix to actually build with llvm-17.

 -- Timo Aaltonen <tjaalton@debian.org>  Sat, 16 Dec 2023 13:34:32 +0200

mesa (23.3.1-2) unstable; urgency=medium

  * llvmpipe-add-orcjit.diff: Add support for ORCJIT. (Closes: #1058759)

 -- Timo Aaltonen <tjaalton@debian.org>  Fri, 15 Dec 2023 20:59:48 +0200

mesa (23.3.1-1) unstable; urgency=medium

  * New upstream release.